# redqueen

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  implementation-plan.md  pyproject.toml  run.py
.github/workflows/: ci.yml
drq/: archive.py  budget.py  config.py  drq.py  engine.py  generality.py  llm.py  timing.py
drq/domains/: base.py  code_improvement.py  text2sql.py
tests/: test_archive.py  test_budget.py  test_code_improvement.py  test_engine.py  test_smoke.py  test_text2sql.py
